--- a/datasets/manage-datasets.mdx
+++ b/datasets/manage-datasets.mdx
@@ -9,8 +9,8 @@ Effective dataset management is key to maintaining an efficient and relevant sea
 
 To view all datasets associated with a project:
 
-1. Navigate to your project page in the Artemis Search dashboard.
-2. Locate the "Datasets" card.
+1. Click on the desired project card in the Project Dashboard.
+2. Locate the "Datasets" card on the project page.
 3. You'll see a table listing all datasets, including their names and status.
 
 ## Dataset Operations
@@ -27,23 +27,19 @@ For each dataset, you can perform the following actions:
   <Card title="Delete" icon="trash">
     Remove a dataset from your project permanently.
   </Card>
-  <Card title="View Details" icon="eye">
-    See additional information about the dataset.
-  </Card>
 </CardGroup>
 
 ## How to Manage Datasets
 
 <Steps>
   <Step title="Access Dataset Options">
-    Click the ellipsis (...) next to any dataset entry in the table to view available actions.
+    Click the ellipsis (⋮) next to any dataset entry in the table to view available actions.
   </Step>
   <Step title="Choose an Action">
     Select the desired operation from the dropdown menu:
-    - Activate
     - Edit
+    - Activate
     - Delete
-    - View Details
   </Step>
   <Step title="Confirm Action">
     Follow the prompts to complete the chosen action.
@@ -55,33 +51,32 @@ For each dataset, you can perform the following actions:
 <Note>
   Only one dataset can be active per project at a time. Activating a new dataset will automatically deactivate the previously active one.
 </Note>
-
 To activate a dataset:
-
-1. Click the ellipsis (...) next to the dataset you want to activate.
+1. Click the ellipsis (⋮) next to the dataset you want to activate.
 2. Select "Activate" from the dropdown menu.
 3. Confirm the action in the popup dialog.
+
 
 ## Editing a Dataset
 
 Editing allows you to update the dataset's name:
 
-1. Click the ellipsis (...) next to the dataset you want to edit.
+1. Click the ellipsis (⋮) next to the dataset you want to edit.
 2. Select "Edit" from the dropdown menu.
 3. In the popup modal, enter the new name for your dataset.
 4. Click "Save" to apply the changes.
 
 ## Deleting a Dataset
-
 <Warning>
   Deleting a dataset is permanent and cannot be undone. Ensure you have a backup if needed.
 </Warning>
 
 To delete a dataset:
 
-1. Click the ellipsis (...) next to the dataset you want to delete.
+1. Click the ellipsis (⋮) next to the dataset you want to delete.
 2. Select "Delete" from the dropdown menu.
 3. Confirm the deletion in the popup dialog.
+
 
 ## Best Practices
 
