--- a/datasets/understanding-datasets.mdx
+++ b/datasets/understanding-datasets.mdx
@@ -46,10 +46,10 @@ Within a project, you can have multiple datasets, but only one can be active at 
 Now that you understand the basics of datasets in Artemis Search, learn how to:
 
 <CardGroup cols={2}>
-  <Card title="Upload a Dataset" icon="upload" href="/upload-a-dataset">
+  <Card title="Upload a Dataset" icon="upload" href="/datasets/upload-a-dataset">
     Add your own data to Artemis Search
   </Card>
-  <Card title="Manage Datasets" icon="list-check" href="/manage-datasets">
+  <Card title="Manage Datasets" icon="list-check" href="/datasets/manage-datasets">
     View, activate, edit, and delete your datasets
   </Card>
 </CardGroup>
