--- a/datasets/upload-a-dataset.mdx
+++ b/datasets/upload-a-dataset.mdx
@@ -30,7 +30,7 @@ Follow these steps to upload your dataset:
 
 <Steps>
   <Step title="Navigate to Your Project">
-    Go to the Artemis Search dashboard and select the project you want to add the dataset to.
+    Go to the Project Dashboard and select the project you want to add the dataset to.
   </Step>
   <Step title="Open the Datasets Card">
     Locate the "Datasets" card on your project page.
@@ -64,6 +64,6 @@ Once your dataset is successfully uploaded:
 
 Now that you've uploaded your dataset, learn how to:
 
-<Card title="Manage Datasets" icon="list-check" href="/manage-datasets">
+<Card title="Manage Datasets" icon="list-check" href="/datasets/manage-datasets">
   Activate, edit, or delete your uploaded datasets
 </Card>
