--- a/machines/manage-machines.mdx
+++ b/machines/manage-machines.mdx
@@ -9,20 +9,20 @@ Proper machine management is crucial for maintaining optimal performance and cos
 
 To view and manage your machines:
 
-1. Navigate to your project page in the Artemis Search dashboard.
+1. Navigate to your project page by clicking on the project card in the Project Dashboard.
 2. Locate the "Machines" card, which displays a table of all machines in your project.
 
 ## Machine Management Options
 
 <CardGroup cols={2}>
   <Card title="Add Machine" icon="plus">
-    Add new machines to your project as needed. [Learn how to add a machine](/machines/add-a-machine)
+    Add new machines to your project as needed. [Learn how to add a machine](/machines/create-a-machine)
   </Card>
   <Card title="Delete Machine" icon="trash">
     Remove unnecessary machines to optimize costs.
   </Card>
   <Card title="Monitor Status" icon="gauge">
-    Keep track of each machine's status in the Machines table.
+    Keep track of active machines in the Project Status card.
   </Card>
   <Card title="View Performance" icon="chart-line">
     Check machine performance in the Project Status card.
@@ -38,7 +38,7 @@ To delete a machine:
     Find the machine you want to delete in the Machines table.
   </Step>
   <Step title="Click the Options Menu">
-    Click the ellipsis (...) next to the machine entry to open the options menu.
+    Click the ellipsis (⋮) next to the machine entry to open the options menu.
   </Step>
   <Step title="Select 'Delete'">
     Choose the "Delete" option from the menu.
@@ -71,14 +71,14 @@ Remember, your project must have at least one machine to remain active. If you d
 If you encounter issues with your machines:
 
 <AccordionGroup>
-  <Accordion title="Machine Not Starting" icon="exclamation-triangle">
+  <Accordion title="Machine Not Starting">
     If a machine fails to start, try deleting it and adding a new one. If the problem persists, contact Artemis Search support.
   </Accordion>
-  <Accordion title="Slow Performance" icon="turtle">
+  <Accordion title="Slow Performance">
     Consider adding more machines to your project to distribute the load.
   </Accordion>
-  <Accordion title="Unexpected Costs" icon="money-bill-wave">
-    Review your machine usage and delete any unnecessary machines. Set up cost alerts in your account settings.
+  <Accordion title="Unexpected Costs">
+    Review your machine usage and delete any unnecessary machines.
   </Accordion>
 </AccordionGroup>
 
