--- a/machines/understanding-machines.mdx
+++ b/machines/understanding-machines.mdx
@@ -7,25 +7,23 @@ Machines are a core component of Artemis Search's technology, enabling high-perf
 
 ## What are Machines?
 
-<Note>
 Machines in Artemis Search are computational resources dedicated to running our advanced ML model on your active datasets.
-</Note>
 
 Machines are responsible for processing search requests and performing the "intelligent" searches that set Artemis Search apart from traditional search engines and RAG systems.
 
 ## Key Concepts
 
 <AccordionGroup>
-  <Accordion title="Purpose" icon="bullseye">
+  <Accordion title="Purpose">
     Machines run our ML model to perform reasoning-based searches on your datasets, allowing for more accurate and context-aware results.
   </Accordion>
-  <Accordion title="Scalability" icon="arrows-scale">
+  <Accordion title="Scalability">
     You can add multiple machines to a project to handle increased load and improve response times.
   </Accordion>
-  <Accordion title="Load Balancing" icon="balance-scale">
+  <Accordion title="Load Balancing">
     Search requests are automatically distributed among available machines to optimize performance.
   </Accordion>
-  <Accordion title="Project Activation" icon="power-off">
+  <Accordion title="Project Activation">
     At least one machine must be assigned to a project for it to be considered "active" and ready for use.
   </Accordion>
 </AccordionGroup>
@@ -56,10 +54,10 @@ To get the most out of your machines in Artemis Search:
 1. Start with at least one machine per project to ensure it's active.
 2. Monitor your project's performance and add machines as needed to handle increased load.
 3. Consider removing unnecessary machines to optimize costs when demand is lower.
-4. Regularly check the status of your machines in the project dashboard.
+4. Regularly check the status of your machines in your project page.
 
 <Tip>
 Remember, you need both an active dataset and at least one machine assigned to a project for it to be operational in the playground.
 </Tip>
 
-In the next section, we'll walk you through the process of [adding a machine](/machines/add-a-machine) to your project.
+In the next section, we'll walk you through the process of [adding a machine](/machines/create-a-machine) to your project.
