--- a/organizations-and-teams/managing-organizations.mdx
+++ b/organizations-and-teams/managing-organizations.mdx
@@ -10,7 +10,7 @@ Organizations in Artemis Search allow you to group projects and team members tog
 To view your organization details:
 
 1. Log in to your Artemis Search account
-2. Navigate to the Settings page
+2. Click on the 'Settings' in the navigation bar
 3. Click on the 'Organization' tab
 
 Here, you can view your organization name and other relevant details.
@@ -34,7 +34,7 @@ Here, you can view your organization name and other relevant details.
 
 ## Switching Organizations
 
-If you've been invited to multiple organizations, you can easily switch between them:
+If you've been invited to an organization, you can easily switch to it:
 
 <Steps>
   <Step title="Go to Organization Settings">
@@ -51,8 +51,12 @@ If you've been invited to multiple organizations, you can easily switch between 
   </Step>
 </Steps>
 
+<Warning>
+  If you are the only member of your organization, your organization will be deleted when you switch to another organization.
+</Warning>
+
 <Note>
-  Switching organizations will log you out of your current organization and into the new one. Make sure to save any unsaved work before switching.
+  If you are not the only member of your organization, you will need to receive a new invitation in order to switch back to it.
 </Note>
 
 ## Deleting Your Organization
