--- a/organizations-and-teams/team-management.mdx
+++ b/organizations-and-teams/team-management.mdx
@@ -21,11 +21,8 @@ Here, you'll see a list of all members in your organization.
   <Step title="Access Team Settings">
     Navigate to Settings > Team in the Artemis Search dashboard.
   </Step>
-  <Step title="Initiate Invite">
-    Find the 'Invite Member' card and click on it.
-  </Step>
   <Step title="Enter Email">
-    Type in the email address of the person you want to invite.
+    Find the 'Invite Member' card and type in the email address of the person you want to invite.
   </Step>
   <Step title="Send Invitation">
     Click 'Send Invite' to send an invitation email to the new member.
@@ -33,7 +30,7 @@ Here, you'll see a list of all members in your organization.
 </Steps>
 
 <Note>
-  Invited members will receive an email with instructions on how to join your organization. They will need to create an Artemis Search account if they don't already have one.
+  Invited members will receive an email inviting them to join your organization. They will need to create an Artemis Search account if they don't already have one.
 </Note>
 
 ## Managing Invitations
@@ -43,7 +40,7 @@ You can view and manage pending invitations:
 1. Go to Settings > Team
 2. Find the 'Invited Members' card
 3. Here you can see all pending invitations
-4. To revoke an invitation, click the ellipsis (...) next to the invite and select 'Delete'
+4. To revoke an invitation, click the ellipsis (⋮) next to the invite and select 'Delete'
 
 ## Removing Team Members
 
@@ -57,7 +54,7 @@ To remove a team member from your organization:
     Find the member you want to remove in the 'Members' table.
   </Step>
   <Step title="Remove Member">
-    Click the ellipsis (...) next to the member's name and select 'Delete'.
+    Click the ellipsis (⋮) next to the member's name and select 'Delete'.
   </Step>
   <Step title="Confirm Removal">
     Confirm the action when prompted.
@@ -76,4 +73,4 @@ To remove a team member from your organization:
 
 ## Next Steps
 
-Now that you know how to manage your team, learn about [managing projects](/projects/managing-projects) to organize your work effectively.
+Now that you know how to manage your team, learn about [managing projects](/projects/manage-projects) to organize your work effectively.
