--- a/playground/experimenting-with-searches.mdx
+++ b/playground/experimenting-with-searches.mdx
@@ -8,25 +8,25 @@ Artemis Search's intelligent search technology allows you to perform complex, re
 ## Types of Searches
 
 <AccordionGroup>
-  <Accordion title="Simple Keyword Search" icon="search">
+  <Accordion title="Simple Keyword Search" >
     Start with basic keyword searches to familiarize yourself with the system.
     
     Example: "artificial intelligence"
   </Accordion>
   
-  <Accordion title="Phrase Search" icon="quote-right">
+  <Accordion title="Phrase Search" >
     Use quotes to search for exact phrases.
     
     Example: "machine learning applications in healthcare"
   </Accordion>
   
-  <Accordion title="Conceptual Search" icon="brain">
+  <Accordion title="Conceptual Search" >
     Leverage Artemis Search's reasoning capabilities to find results based on concepts rather than just keywords.
     
     Example: "companies working on sustainable energy solutions"
   </Accordion>
   
-  <Accordion title="Attribute-based Search" icon="tags">
+  <Accordion title="Attribute-based Search" >
     Search for entities with specific attributes or characteristics.
     
     Example: "startups with female founders in the fintech industry"
@@ -71,15 +71,15 @@ Let's walk through some example searches to demonstrate Artemis Search's capabil
 
 <CodeGroup>
 
-```plaintext Search: Companies that require HIPAA compliance
+```plaintext "Companies that require HIPAA compliance"
 This search will return companies in industries that typically need to comply with HIPAA regulations, such as healthcare providers, insurance companies, and health tech startups.
 ```
 
-```plaintext Search: Sustainable fashion brands using recycled materials
+```plaintext "Sustainable fashion brands using recycled materials"
 This query will find fashion companies that prioritize sustainability and specifically use recycled materials in their products.
 ```
 
-```plaintext Search: AI startups focused on natural language processing
+```plaintext "AI startups focused on natural language processing"
 This search targets AI companies specializing in NLP technologies, which could include chatbots, translation services, or text analysis tools.
 ```
 
