--- a/projects/create-a-project.mdx
+++ b/projects/create-a-project.mdx
@@ -29,7 +29,7 @@ Creating a new project in Artemis Search is a straightforward process. Follow th
 </Steps>
 
 <Note>
-  After creating your project, you'll need to add datasets and machines to make it active. These steps are covered in the [Manage Projects](/manage-projects) guide.
+  After creating your project, you'll need to add datasets and machines to make it active. These steps are covered in the [Manage Projects](/projects/manage-projects) guide.
 </Note>
 
 ## Project Creation Best Practices
@@ -44,6 +44,9 @@ Creating a new project in Artemis Search is a straightforward process. Follow th
 
 <Accordion title="Consider Resource Allocation">
   Think about how many machines you'll need for your project based on the expected search volume and complexity.
+  <Note>
+    If the search seems slow, you can add more machines to the project.
+  </Note>
 </Accordion>
 
 ## Next Steps
@@ -54,6 +57,6 @@ After creating your project, you'll want to:
 2. Assign machines to your project
 3. Configure your project settings
 
-Head over to the [Manage Projects](/manage-projects) guide to learn how to perform these actions and get your project up and running.
+Head over to the [Manage Projects](/projects/manage-projects) guide to learn how to perform these actions and get your project up and running.
 
 If you encounter any issues during project creation, please contact our support team at [pallavi@artemisar.com](mailto:pallavi@artemisar.com).
