--- a/projects/manage-projects.mdx
+++ b/projects/manage-projects.mdx
@@ -10,22 +10,23 @@ Once you've created a project in Artemis Search, you'll need to manage various a
 <Accordion title="Edit Project Information">
   To edit your project's name, description, or model type:
 
-  1. Navigate to the project page
-  2. Locate the "Project Details" card
+  1. Navigate to the Project Dashboard
+  2. Click on the card with your project's name to open the project page
   3. Make your changes
   4. Click "Save Changes" in the top-right corner of the page
 </Accordion>
 
 <Accordion title="Delete a Project">
-  <Warning>
-    Deleting a project is irreversible. Make sure you want to permanently remove the project and all its associated data.
-  </Warning>
 
   To delete a project:
 
-  1. Go to the project page
-  2. Click the "Delete" button in the top-right corner
-  3. Confirm the deletion when prompted
+  1. Navigate to the Project Dashboard
+  2. Click on the card with your project's name to open the project page
+  3. Click the "Delete" button in the top-right corner
+  4. Confirm the deletion when prompted
+  <Warning>
+    Deleting a project is irreversible. Make sure you want to permanently remove the project and all its associated data.
+  </Warning>
 </Accordion>
 
 ## Managing Datasets
@@ -46,7 +47,7 @@ Once you've created a project in Artemis Search, you'll need to manage various a
 <Accordion title="Activate a Dataset">
   To set a dataset as active for your project:
 
-  1. In the "Datasets" table, click the ellipsis (...) next to the dataset
+  1. In the "Datasets" table, click the ellipsis (⋮) next to the dataset
   2. Select "Activate"
 
   <Warning>
@@ -57,7 +58,7 @@ Once you've created a project in Artemis Search, you'll need to manage various a
 <Accordion title="Edit or Delete a Dataset">
   To edit a dataset's name or delete it:
 
-  1. Click the ellipsis (...) next to the dataset in the "Datasets" table
+  1. Click the ellipsis (⋮) next to the dataset in the "Datasets" table
   2. Choose "Edit" to rename the dataset, or "Delete" to remove it
 </Accordion>
 
@@ -74,7 +75,7 @@ Once you've created a project in Artemis Search, you'll need to manage various a
 <Accordion title="Delete a Machine">
   To remove a machine from your project:
 
-  1. In the "Machines" table, click the ellipsis (...) next to the machine
+  1. In the "Machines" table, click the ellipsis (⋮) next to the machine
   2. Select "Delete"
   3. Wait for the deletion process to complete
 </Accordion>
@@ -85,7 +86,7 @@ Once you've created a project in Artemis Search, you'll need to manage various a
 
 ## Project Status
 
-Monitor your project's status using the Project Status card, which displays:
+Monitor your project's status using the Project Status card in the project page, which displays:
 
 - Monthly Accrued Cost (coming soon)
 - Active Machines
@@ -96,8 +97,10 @@ Monitor your project's status using the Project Status card, which displays:
 
 Once your project is active (has an active dataset and at least one machine), you can use it in the playground:
 
-1. Navigate to the project page
-2. Click "Open in Playground" in the top-right corner
+You can access the playground in two ways:
+
+1. Click the "Playground" button in the top-right corner of the project page
+2. Navigate to the "Playground" tab on the project page and select your project under "Project" in "Settings"
 
 In the playground, you can:
 
@@ -114,6 +117,6 @@ In the playground, you can:
 Now that you know how to manage your projects, you might want to:
 
 - Learn about [API integration](/api-reference/introduction) to incorporate Artemis Search into your applications
-- Explore [advanced search techniques](/advanced-search) to optimize your queries
+- Understand how to [perform a search](/search/performing-a-search)
 
 If you need any assistance with project management, please reach out to our support team at [pallavi@artemisar.com](mailto:pallavi@artemisar.com).
