--- a/projects/understanding-projects.mdx
+++ b/projects/understanding-projects.mdx
@@ -3,7 +3,7 @@ title: "Understanding Projects"
 description: "Learn about projects in Artemis Search and how they organize your search tasks"
 ---
 
-Projects are the highest level of organization in Artemis Search. Each project is dedicated to a particular search task, allowing you to efficiently manage and configure your intelligent searches.
+Projects are the top-level entities in Artemis Search. Each project is dedicated to a particular search task, allowing you to efficiently manage and configure your intelligent searches.
 
 ## What is a Project?
 
@@ -36,7 +36,7 @@ A project in Artemis Search contains:
 
 ## Project Status
 
-The status of your project is determined by two main factors:
+The status (active/inactive) of your project is determined by two main factors:
 
 1. **Active Dataset**: At least one dataset must be activated for the project to be operational.
 2. **Assigned Machines**: The project needs at least one machine assigned to process search requests.
@@ -49,7 +49,7 @@ The status of your project is determined by two main factors:
 
 Now that you understand the basics of projects in Artemis Search, you're ready to:
 
-- [Create a Project](/create-a-project)
-- [Manage Projects](/manage-projects)
+- [Create a Project](/projects/create-a-project)
+- [Manage Projects](/projects/manage-projects)
 
 If you have any questions about projects or need assistance, don't hesitate to contact our support team at [pallavi@artemisar.com](mailto:pallavi@artemisar.com).
