--- a/search/performing-a-search.mdx
+++ b/search/performing-a-search.mdx
@@ -7,7 +7,7 @@ description: "Learn how to execute a search query using Artemis Search"
 
 Before you begin, ensure that:
 - You have [created a project](/projects/create-a-project) in Artemis Search
-- You have [uploaded and activated a dataset](/datasets/upload-and-activate) for your project
+- You have [uploaded and activated a dataset](/datasets/upload-a-dataset) for your project
 - Your project is in an "active" state with at least one machine assigned
 
 ## Steps to Perform a Search
@@ -53,11 +53,10 @@ search_query = "companies that require HIPAA compliance"
 </CodeGroup>
 
 <Note>
-  Artemis Search excels at queries requiring reasoning. For example, instead of just finding companies related to medicine or HIPAA compliance, it will return companies that actually match the criteria of requiring HIPAA compliance.
+  Artemis Search excels at queries requiring reasoning. For example, instead of just finding companies related to healthcare or HIPAA compliance, it will return companies that actually match the criteria of requiring HIPAA compliance.
 </Note>
 
 ## Next Steps
 
 - Learn more about [search parameters](/search/search-parameters)
 - Understand how to [interpret search results](/search/interpreting-results)
-- Explore [advanced search techniques](/search/advanced-techniques)
