--- a/search/search-parameters.mdx
+++ b/search/search-parameters.mdx
@@ -76,3 +76,7 @@ response = requests.get(url, params=params, headers=headers)
 - Start with a larger `top_k` value and gradually decrease it as you refine your search.
 - Use `clear_flag=true` when starting a new search context to avoid interference from previous queries.
 - Experiment with different `num_batches` values to balance between search depth and response time.
+
+## Next Steps
+
+- View our [API reference](/api-reference) for more details on search parameters.
