--- a/get-started/key-concepts.mdx
+++ b/get-started/key-concepts.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Key Concepts"
-description: "Understanding the core components of Artemis Search"
+title: 'Key Concepts'
+description: 'Understanding the core components of Artemis Search'
 ---
 
 ## Overview
@@ -8,8 +8,9 @@ description: "Understanding the core components of Artemis Search"
 Artemis Search is built on several interconnected components that work together to provide powerful, reasoning-based searches. The following diagram illustrates how these components relate to each other:
 
 <Accordion title="Artemis Search Component Relationship">
-  <Mermaid chart={`
-   graph TD
+  <Mermaid
+  chart={`
+    graph TD
       A[Organization] --> B[Projects]
       B --> C[Datasets]
       B -->|Has Multiple| D[Machines]
@@ -19,23 +20,26 @@ Artemis Search is built on several interconnected components that work together 
         D
       end
       
-      subgraph DatasetPkl[Dataset pkl]
+      subgraph DatasetPkl["Dataset pkl"]
         E[Embeddings]
         F[Tags]
       end
       
-      C --> |Has One Active| DatasetPkl
+      C --> |Has One Active| E
+      C --> F
       
-      style DatasetPkl fill:#cfe,stroke:#333,stroke-width:2px
-  `}/>
+      style E fill:#cfe,stroke:#333,stroke-width:2px
+      style F fill:#cfe,stroke:#333,stroke-width:2px
+  `}
+ />
 </Accordion>
 
 This diagram illustrates the structure of Artemis Search, highlighting key relationships:
 
-1. Organizations consist of projects.
-2. Each project serves a particular search task. Each project may have multiple datasets but only one can be active at a time. Further, each project has dedicated machines to process search requests.
-3. Datasets are two-column pickled Pandas dataframes with two columns (`embedding` and `tags`), and only one at a time may be activated.
-4. Machines are cloud servers which process the search requests on the active dataset. These are automatically load balanced.
+1. **Organizations** consist of **projects**.
+2. Each **project** serves a particular search task. Each project may have multiple datasets but only one can be active at a time. Further, each project has dedicated machines to process search requests.
+3. **Datasets** are two-column pickled Pandas dataframes with two columns (`embedding` and `tags`), and only one at a time may be activated.
+4. **Machines** are cloud servers which process the search requests on the active dataset. These are automatically load balanced.
 
 Let's explore each of these components in more detail.
 
@@ -44,12 +48,13 @@ Let's explore each of these components in more detail.
 <Accordion title="What makes our search 'intelligent'?">
   Artemis Search goes beyond traditional keyword matching or simple semantic similarity. Our technology excels at searches that require "reasoning," allowing it to understand and interpret complex queries in context.
 
-  For example, when searching for "companies that require HIPAA compliance," our system doesn't just find companies related to medicine or HIPAA compliance. It actually reasons about which companies would be subject to HIPAA regulations based on their descriptions and activities.
+For example, when searching for _"companies that require HIPAA compliance"_, our system doesn't just find companies related to medicine or HIPAA compliance. It actually reasons about which companies would be subject to HIPAA regulations based on their descriptions and activities.
+
 </Accordion>
 
 ## Projects
 
-Projects are the highest level of organization in Artemis Search. Each project is dedicated to a particular search task.
+Projects are the top-level entities in Artemis Search. Each project is dedicated to a particular search task.
 
 <Accordion title="What defines a project?">
   A project consists of:
@@ -58,7 +63,8 @@ Projects are the highest level of organization in Artemis Search. Each project i
   - One or more machines
   - Configuration settings (e.g., model type)
 
-  Think of a project as a self-contained environment for a specific search use case.
+Think of a project as a self-contained environment for a specific search use case.
+
 </Accordion>
 
 ## Datasets
@@ -70,7 +76,8 @@ Datasets are the foundation of your searches. They contain the information that 
   1. `embedding`: Contains OpenAI text-large-3 embeddings of the text you want to search through.
   2. `tag`: Contains string values associated with each embedding, which will be returned as the content associated with each search result.
 
-  You can have multiple datasets in a project, but only one can be active at a time.
+You can have multiple datasets in a project, but only one can be active at a time.
+
 </Accordion>
 
 ## Machines
@@ -78,10 +85,10 @@ Datasets are the foundation of your searches. They contain the information that 
 Machines are the computational resources that power your searches.
 
 <Accordion title="How do machines work?">
-  - Each machine runs our ML model on the active dataset when responding to search requests.
-  - You can have multiple machines per project for load balancing.
-  - At least one machine must be assigned to a project for it to be active.
-  - Requests are automatically load-balanced among available machines.
+    Each machine runs our ML model on the active dataset when responding to search requests. 
+    - You can have multiple machines per project for load balancing. 
+    - At least one machine must be assigned to a project for it to be active. 
+    - Requests are automatically load-balanced among available machines.
 </Accordion>
 
 ## Playground
@@ -89,11 +96,11 @@ Machines are the computational resources that power your searches.
 The playground is where you can experiment with and fine-tune your searches. Under the hood, it uses the API to perform searches.
 
 <Accordion title="What can you do in the playground?">
-  In the playground, you can:
-  - Select which project to experiment with
-  - Adjust search parameters like synthetic dataset size, probability threshold, and top-K threshold
-  - Enter search queries
-  - View and analyze search results in real-time
+    In the playground, you can: 
+    - Select which project to experiment with
+    - Adjust search parameters like synthetic dataset size, probability threshold, and top-K threshold
+    - Enter search queries
+    - View and analyze search results in real-time
 </Accordion>
 
 ## Search Parameters
@@ -103,7 +110,8 @@ The playground is where you can experiment with and fine-tune your searches. Und
   - **Probability Threshold**: Filters results to keep only those above a certain probability of matching the search query.
   - **Top-K Threshold**: Limits the number of top results returned.
 
-  Adjusting these parameters allows you to fine-tune the balance between search accuracy and performance.
+Adjusting these parameters allows you to fine-tune the balance between search accuracy and performance.
+
 </Accordion>
 
 ## API Integration
@@ -115,7 +123,8 @@ Artemis Search provides a RESTful API for seamless integration with your applica
   - The main endpoint is `/search`, which accepts parameters like `search_query`, `num_batches`, `clear_flag`, and `top_k`.
   - API requests must include your API token in the Authorization header.
 
-  For detailed API documentation, check out our [API Reference](/api-reference) section.
+For detailed API documentation, check out our [API Reference](/api-reference) section.
+
 </Accordion>
 
 Understanding these key concepts will help you leverage the full power of Artemis Search in your projects. If you're ready to start building, head over to our [Quickstart Guide](/quickstart) to set up your first project.
