--- a/machines/create-a-machine.mdx
+++ b/machines/create-a-machine.mdx
@@ -10,7 +10,6 @@ Adding a machine to your Artemis Search project is a straightforward process. Th
 Before adding a machine, ensure that:
 
 - You have created a project in Artemis Search
-- You have the necessary permissions to add machines to the project
 
 ## Steps to Add a Machine
 
@@ -35,30 +34,13 @@ Before adding a machine, ensure that:
   </Step>
 </Steps>
 
-## Machine Creation Process
-
-<AccordionGroup>
-  <Accordion title="Initialization" icon="cube">
-    Artemis Search allocates resources for your new machine.
-  </Accordion>
-  <Accordion title="Model Loading" icon="brain">
-    Our ML model is loaded onto the machine.
-  </Accordion>
-  <Accordion title="Integration" icon="link">
-    The machine is integrated with your project's active dataset.
-  </Accordion>
-  <Accordion title="Activation" icon="power-off">
-    The machine is activated and ready to process search requests.
-  </Accordion>
-</AccordionGroup>
-
 ## After Adding a Machine
 
 Once you've successfully added a machine:
 
-- Your project will become active (if it wasn't already)
+- Your project will become active (if a dataset is active)
 - The new machine will automatically start handling search requests
-- You can monitor its performance in the Project Status card
+- You can monitor its performance in the Project Status card on the project page
 
 <Tip>
 If you need to add multiple machines, you can repeat this process as needed. Remember, more machines can help handle higher loads, but may also increase costs.
