--- a/settings/account-settings.mdx
+++ b/settings/account-settings.mdx
@@ -16,47 +16,34 @@ Manage your personal account settings and preferences in the Artemis Search plat
 ## Available Settings
 
 <AccordionGroup>
-  <Accordion title="Profile Information">
-    Update your basic profile information:
-    - Name
-    - Email address
-    - Profile picture
-
-    <Note>
-      Changing your email address will require re-verification.
-    </Note>
+  <Accordion title="Account">
+    1. View the email address associated with your Artemis Search account.
+    2. View your account ID.
+    3. Delete your account.
   </Accordion>
 
-  <Accordion title="Password">
-    Change your account password:
-    1. Enter your current password
-    2. Enter your new password
-    3. Confirm your new password
+  <Accordion title="Organization">
+    1. View or change your organization name.
+    2. Switch to another organization.
 
-    <Tip>
-      Use a strong, unique password to secure your account.
-    </Tip>
+    Learn more about [managing organizations](/organizations-and-teams/managing-organizations).
+  </Accordion> 
+
+  <Accordion title="Team">
+    1. View your team members.
+    2. Invite new team members.
+    3. Remove team members.
+    4. View members you invited.
+
+    Learn more about [managing teams](/organizations-and-teams/team-management).
   </Accordion>
 
-  <Accordion title="Notification Preferences">
-    Customize how and when you receive notifications:
-    - Email notifications
-    - In-app notifications
-    - Project updates
-    - Billing alerts
-  </Accordion>
+  <Accordion title="Secrets">
+  View your organization's API Key.
 
-  <Accordion title="Linked Accounts">
-    Manage third-party accounts linked to your Artemis Search account:
-    - Google
-    - GitHub
-    - Slack
-
-    <Info>
-      Linking accounts can enable additional features and integrations.
-    </Info>
-  </Accordion>
-</AccordionGroup>
+  Learn more about [API Keys](/settings/api-keys).
+  </Accordion> 
+ </AccordionGroup> 
 
 ## Delete Account
 
@@ -67,16 +54,13 @@ If you wish to delete your account, please follow these steps:
     Scroll to the bottom of the Account Settings page and click on "Delete Account".
   </Step>
   <Step title="Confirm Deletion">
-    Read through the implications of account deletion and confirm your decision.
+    Read through the implications of account deletion and type "DELETE" to confirm.
   </Step>
-  <Step title="Provide Feedback">
-    Optionally, provide feedback on why you're deleting your account.
-  </Step>
-  <Step title="Final Confirmation">
-    Enter your password to confirm the account deletion.
+  <Step title="Delete Account">
+    Click on "Delete Account" to proceed.
   </Step>
 </Steps>
 
 <Warning>
-  Account deletion is irreversible. All your data and projects will be permanently removed.
+  Account deletion is irreversible. If you are the only member of your organization, all projects associated with your organization will be deleted.
 </Warning>
