--- a/billing-and-usage/understanding-billing.mdx
+++ b/billing-and-usage/understanding-billing.mdx
@@ -48,9 +48,9 @@ Once we move out of beta, we plan to implement our billing system as follows:
   </Step>
 </Steps>
 
-<Card title="Questions about billing?" icon="question" href="mailto:pallavi@artemisar.com">
-  Our team is here to help! Reach out if you have any questions or concerns about our current or future billing practices.
-</Card>
+### Questions about Billing?
+
+Our team is here to help! Reach out at [pallavi@artemisar.com](mailto:pallavi@artemisar.com) if you have any questions or concerns about our current or future billing practices.
 
 ## Stay Updated
 
