--- a/playground/experimenting-with-searches.mdx
+++ b/playground/experimenting-with-searches.mdx
@@ -37,15 +37,15 @@ Artemis Search's intelligent search technology allows you to perform complex, re
 
 To get the most out of Artemis Search, consider the following tips when crafting your queries:
 
-<Card title="Be Specific" icon="bullseye">
+<Card title="Be Specific">
   The more specific your query, the more targeted your results will be. Instead of "tech companies," try "AI-powered cybersecurity startups founded after 2020."
 </Card>
 
-<Card title="Use Natural Language" icon="comment-alt">
+<Card title="Use Natural Language">
   Artemis Search understands context, so phrase your queries as you would a question to a human expert.
 </Card>
 
-<Card title="Combine Concepts" icon="object-group">
+<Card title="Combine Concepts">
   Don't hesitate to combine multiple concepts in a single query, such as "environmentally friendly manufacturing techniques in the automotive industry."
 </Card>
 
