added video walkthrough

--- a/get-started/quickstart.mdx
+++ b/get-started/quickstart.mdx
@@ -7,6 +7,9 @@ Artemis Search is a powerful technology that allows you to perform "intelligent"
 
 <Note>To get started quickly, follow these steps to set up your first project and run a search.</Note>
 
+<iframe src="https://www.loom.com/embed/936ad3f6f8894f4a80e885a63bd59e56?sid=59eb210f-5dfb-4496-81cb-fcbaca62e444" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+
+
 ## 1. Sign up for an account
 
 Create an account or log in to Artemis Search:
