added sample dataset size

--- a/datasets/understanding-datasets.mdx
+++ b/datasets/understanding-datasets.mdx
@@ -5,6 +5,10 @@ description: "Learn about datasets in Artemis Search and how they power intellig
 
 Datasets are at the core of Artemis Search's intelligent search technology. They consist of embeddings and associated tags, enabling our advanced search capabilities that excel at "reasoning" and outperform traditional RAG systems.
 
+<Tip>
+We have provided a limited sample dataset for you to explore with. It contains ~19,000 company descriptions. In the case you are unable to find matches for your searches, we recommend uploading a bigger dataset.
+</Tip>
+
 ## What is a Dataset?
 
 A dataset in Artemis Search is a collection of:
